; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_stldec.c_get_pts.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_stldec.c_get_pts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [39 x i8] c"%2d:%2d:%2d:%2d , %2d:%2d:%2d:%2d , %n\00", align 1
@AV_NOPTS_VALUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i32*)* @get_pts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_pts(i8** %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i8** %0, i8*** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %14, align 4
  %17 = load i8**, i8*** %4, align 8
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @sscanf(i8* %18, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32* %6, i32* %7, i32* %8, i32* %9, i32* %10, i32* %11, i32* %12, i32* %13, i32* %14)
  %20 = icmp sge i32 %19, 8
  br i1 %20, label %21, label %65

21:                                               ; preds = %2
  %22 = load i32, i32* %14, align 4
  %23 = icmp sgt i32 %22, 0
  br i1 %23, label %24, label %65

24:                                               ; preds = %21
  %25 = load i32, i32* %6, align 4
  %26 = sext i32 %25 to i64
  %27 = mul nsw i64 %26, 3600
  %28 = load i32, i32* %7, align 4
  %29 = sext i32 %28 to i64
  %30 = mul nsw i64 %29, 60
  %31 = add nsw i64 %27, %30
  %32 = load i32, i32* %8, align 4
  %33 = sext i32 %32 to i64
  %34 = add nsw i64 %31, %33
  %35 = mul nsw i64 %34, 100
  %36 = load i32, i32* %9, align 4
  %37 = sext i32 %36 to i64
  %38 = add nsw i64 %35, %37
  %39 = trunc i64 %38 to i32
  store i32 %39, i32* %15, align 4
  %40 = load i32, i32* %10, align 4
  %41 = sext i32 %40 to i64
  %42 = mul nsw i64 %41, 3600
  %43 = load i32, i32* %11, align 4
  %44 = sext i32 %43 to i64
  %45 = mul nsw i64 %44, 60
  %46 = add nsw i64 %42, %45
  %47 = load i32, i32* %12, align 4
  %48 = sext i32 %47 to i64
  %49 = add nsw i64 %46, %48
  %50 = mul nsw i64 %49, 100
  %51 = load i32, i32* %13, align 4
  %52 = sext i32 %51 to i64
  %53 = add nsw i64 %50, %52
  %54 = trunc i64 %53 to i32
  store i32 %54, i32* %16, align 4
  %55 = load i32, i32* %16, align 4
  %56 = load i32, i32* %15, align 4
  %57 = sub nsw i32 %55, %56
  %58 = load i32*, i32** %5, align 8
  store i32 %57, i32* %58, align 4
  %59 = load i32, i32* %14, align 4
  %60 = load i8**, i8*** %4, align 8
  %61 = load i8*, i8** %60, align 8
  %62 = sext i32 %59 to i64
  %63 = getelementptr inbounds i8, i8* %61, i64 %62
  store i8* %63, i8** %60, align 8
  %64 = load i32, i32* %15, align 4
  store i32 %64, i32* %3, align 4
  br label %67

65:                                               ; preds = %21, %2
  %66 = load i32, i32* @AV_NOPTS_VALUE, align 4
  store i32 %66, i32* %3, align 4
  br label %67

67:                                               ; preds = %65, %24
  %68 = load i32, i32* %3, align 4
  ret i32 %68
}

declare dso_local i32 @sscanf(i8*, i8*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
